[tool.poetry]
name = "cipher_jw4189"
version = "0.1.0"
description = "A Caesar Cipher Encrypter"
authors = ["Joshua Wan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
